...
            <point key="canvasLocation" x="4438" y="-777"/>
        </scene>
        <!--List-->
        <scene sceneID="t0a-Bc-q0a">
            <objects>
                <navigationController id="G9f-DS-EUs" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="List" image="List" id="t65-ys-cGy"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="pl1-1V-jSi">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="qRI-78-HHh" kind="relationship" relationship="rootViewController" id="1hi-cO-bQO"/>
...
            <point key="canvasLocation" x="4438" y="125"/>
        </scene>
        <!--Map-->
        <scene sceneID="7zR-80-7ps">
            <objects>
                <navigationController id="d5H-rG-BZd" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Map" image="Map" id="V0I-fX-21D"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="0Rd-JX-enA">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="RnP-25-qlR" kind="relationship" relationship="rootViewController" id="7yq-Qc-M0u"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yfr-Z6-MOb">
                                <rect key="frame" x="20" y="468" width="335" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="stl-zP-r7a"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
                                <state key="normal" title="Get started">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="getStartedTapped:" destination="Afc-IY-34m" eventType="touchUpInside" id="HYQ-Fk-8SQ"/>
                                </connections>
                            </button>
...
